--- a/login/login.css
+++ b/login/login.css
@@ -4,14 +4,14 @@
     font-family: 'Patrick Hand', cursive;
 }
 body{
-    background-image: url('../img/fundo.jpg');
+    background-image: url('../img/fundop.png');
     background-size:  100% auto;
 }
 nav{
     display: flex;
     width: 100%;
     height: 6em;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, 0.9);
     z-index: -1;
     box-shadow: 0px 0px 26px black;
 }
@@ -36,6 +36,11 @@ nav ul li{
     font-family: 'Patrick Hand', cursive;
 
 }
+a{
+
+    text-decoration: none;
+    color: white;
+}
 
 .logo{
     width: 115px;
@@ -43,19 +48,22 @@ nav ul li{
     margin-top: 7px;
 }
 
+/*  */
+/*  */
+/* Em cima Nav  */
+/*  */
+/*  */
+
 .card{
-    height: 36em;
+    height: 100%;
     width: 643px;
     margin-left: 350px;
+    margin-top: 57px;
     text-align: center;
     
 }
 
-a{
 
-    text-decoration: none;
-    color: white;
-}
 
 .boasvindas{
     width: 11em;
@@ -77,6 +85,7 @@ a{
 }
 
 section h2{
+    margin: 57px;
     font-size: 50px;
     text-align: center;
     color: darkcyan;
@@ -96,6 +105,7 @@ div{
 }
 
 .btn{
+    margin: 20px;
     border-radius: 50px;
     border: dashed;
     padding: 0px 35px;
