--- a/ranking/ranking.css
+++ b/ranking/ranking.css
@@ -4,25 +4,27 @@
     font-family: 'Patrick Hand', cursive;
 }
 body{
-    background-image: url('../img/fundo.jpg');
+    background-image: url('../img/fundop.png');
     background-size:  100% auto;
 }
 nav{
     display: flex;
     width: 100%;
-    height: 5em;
-    background-color: rgba(0, 0, 0, 0.6);
+    height: 6em;
+    background-color: rgba(0, 0, 0, 0.9);
     z-index: -1;
     box-shadow: 0px 0px 26px black;
 }
 
 nav h1{
     color: white;
+    margin-top: 20px;
+    font-size: 45px;
 }
 
 nav ul{
     display: flex;
-    margin-left: 54em;
+    margin-left: 49em;
     margin-top: 35px;
     
 }
@@ -34,6 +36,11 @@ nav ul li{
     font-family: 'Patrick Hand', cursive;
 
 }
+a{
+
+    text-decoration: none;
+    color: white;
+}
 
 .logo{
     width: 115px;
@@ -42,34 +49,34 @@ nav ul li{
 }
 
 .card{
-    height: 36em;
+    margin-top: 57px;
+    height: 100%;
     width: 643px;
     margin-left: 350px;
     background-color: rgba(244, 247, 242, 0.6);
     box-shadow: 0px 0px 26px black;
-}
-
-a{
-
-    text-decoration: none;
-    color: white;
-}
-
-.boasvindas{
-    width: 11em;
-    margin-left: 5em;
-}
-
-.balão{
-    width: 321px;
-}
-
-.inline{
-    display: inline;
-}
-
-
-.card2{
-    border: 1px solid black;
     text-align: center;
+    
 }
+
+
+/* Parte de informações > */
+
+section h2{
+    margin: 57px;
+    font-size: 50px;
+    text-align: center;
+    color: darkcyan;
+}
+
+.img-1 {
+
+    width: 245px; 
+    border-radius: 20px;
+}
+
+.margem{
+    margin: 77px;
+}
+
+
