--- a/conteudo/conteudo.css
+++ b/conteudo/conteudo.css
@@ -4,11 +4,10 @@
     font-family: 'Patrick Hand', cursive;
 }
 body{
-    background-image: url('img/fundop.png');
+    background-image: url('../img/fundop.png');
     background-size:  100% auto;
 }
 nav{
-
     display: flex;
     width: 100%;
     height: 6em;
@@ -25,7 +24,7 @@ nav h1{
 
 nav ul{
     display: flex;
-    margin-left: 45em;
+    margin-left: 49em;
     margin-top: 35px;
     
 }
@@ -38,43 +37,60 @@ nav ul li{
 
 }
 
+a{
+    text-decoration: none;
+    color: white;  
+}
+
+
 .logo{
     width: 115px;
     margin-left:30px;
     margin-top: 7px;
-    
 }
 
-.card{
+/* Daqui para cima: nav */
+
+
+/* Caixa com as informações */
+
+.card {
+    margin-top: 57px;
     height: 100%;
     width: 750px;
     margin-left: 290px;
-    margin-top: 57px;
     background-color: rgba(244, 247, 242, 0.6);
     box-shadow: 0px 0px 26px black;
-}
-
-a{
-
-    text-decoration: none;
-    color: white;
-}
-
-.boasvindas{
-    width: 11em;
-    margin-left: 5em;
-}
-
-.balão{
-    width: 321px;
-}
-
-.inline{
-    display: inline;
-}
-
-
-.card2{
     text-align: center;
-    margin: 37px 0px 39px;
+    
+}
+
+
+/* Parte de informações > */
+
+section h1{
+    margin: 57px;
+    font-size: 50px;
+    text-align: center;
+    color: darkcyan;
+}
+
+.nt-2{
+    width: 19em;
+    height: 16em;
+    border-radius: 52px;
+    margin: 64px 47px;
+}
+
+/* Caixa de comentarios */
+
+
+div ul li{
+    list-style-type: none;
+
+}
+
+.comentarios{
+    margin-top: 30px;
+    padding: 20px 238px 32px;
 }
