--- a/senha/senha.css
+++ b/senha/senha.css
@@ -4,11 +4,11 @@
     font-family: 'Patrick Hand', cursive;
 }
 body{
-    background-image: url('img/fundop.png');
+    background-image: url('../img/fundop.png');
     background-size:  100% auto;
 }
+/* Nav  */
 nav{
-
     display: flex;
     width: 100%;
     height: 6em;
@@ -34,47 +34,68 @@ nav ul li{
     margin-left: 20px;
     list-style-type: none;
     font-size: 20px;
-    font-family: 'Patrick Hand', cursive;
-
-}
-
-.logo{
-    width: 115px;
-    margin-left:30px;
-    margin-top: 7px;
     
-}
 
-.card{
-    height: 100%;
-    width: 750px;
-    margin-left: 290px;
-    margin-top: 57px;
-    background-color: rgba(244, 247, 242, 0.6);
-    box-shadow: 0px 0px 26px black;
 }
-
 a{
 
     text-decoration: none;
     color: white;
 }
 
-.boasvindas{
-    width: 11em;
-    margin-left: 5em;
+.logo{
+    width: 115px;
+    margin-left:30px;
+    margin-top: 7px;
 }
-
-.balão{
-    width: 321px;
-}
-
-.inline{
-    display: inline;
-}
+/*  */
+/*  */
+/* Em cima Nav */
+/*  */
+/*  */
 
 
-.card2{
+/* Parte escrita  */
+.card{
+    height: 100%;
+    width: 750px;
+    margin-left: 290px;
     text-align: center;
-    margin: 37px 0px 39px;
+    margin-top: 57px;
+    background-color: rgba(244, 247, 242, 0.6);
+    box-shadow: 0px 0px 26px black;
+    
 }
+
+section h2{
+    margin: 57px;
+    font-size: 50px;
+    text-align: center;
+    color: darkcyan;
+}
+
+div{
+    padding: 20px;
+}
+
+.barra{
+
+    margin: 10px;
+    border: #63cdf5;
+    border-radius: 50px;
+    padding:10px 60px 2px;
+    text-align: center;
+    font-size: 21px;
+}
+
+.btn{
+    margin: 20px;
+    border-radius: 50px;
+    border: dashed;
+    padding: 0px 35px;
+    font-size: 29px;
+    background-color: #63cdf5;
+    color: #f1f1f1;
+   
+}
+
